k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superstar
  labels:
    app: superstar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superstar
  template:
    metadata:
      labels:
        app: superstar
    spec:
      containers:
      - name: superstar
        image: localhost/superstar:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: data
          mountPath: /app/data
      volumes:
      - name: data
        emptyDir: {}
      # Uncomment the following if you want to use a persistent volume
      # - name: data
      #   persistentVolumeClaim:
      #     claimName: superstar-data

---
apiVersion: v1
kind: Service
metadata:
  name: superstar-service
spec:
  selector:
    app: superstar
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
