microk8s-deployment.yml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superstar
  labels:
    app: superstar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superstar
  template:
    metadata:
      labels:
        app: superstar
    spec:
      containers:
      - name: superstar
        image: localhost:32000/superstar:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: superstar-data-pvc

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: superstar-service
spec:
  selector:
    app: superstar
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: NodePort  # Changed to NodePort for MicroK8s
